# medici

./: CMakeLists.txt
cli/: CMakeLists.txt  main.cpp
sources/: CMakeLists.txt  deck.cpp  deck.h  main.cpp  playing_card.cpp  playing_card.h
sources/deck/: deck.cpp  deck.h  deck.tcc  playing_card.cpp  playing_card.h
sources/dream_hacking/: calculator.cpp  calculator.h  card_selector.cpp  card_selector.h
sources/dream_hacking/calculator/: calculation_data.h  calculator.cpp  calculator.h  i_ching_data.h  thread_data.h
sources/dream_hacking/i-ching/: i_ching.cpp  i_ching.h
sources/dream_hacking/range_selectors/: complex_range_selector.cpp  complex_range_selector.h  existential_range_selector.cpp  existential_range_selector.h  range_selector.cpp  range_selector.h  universal_range_selector.cpp  universal_range_selector.h
sources/patience/: medici.cpp  medici.h  patience.cpp  patience.h
test/: CMakeLists.txt  main.cpp
